--- a/html_workspace/day0418/float/float의이해.html
+++ b/html_workspace/day0418/float/float의이해.html
@@ -13,15 +13,20 @@
         img{
             float: left;
         }
+        #box{
+            width: 300px;
+            height: 300px;
+            background-color: red;
+        }
     </style>
 </head>
 <body>
     <img src="../../images/tenor.gif" width="200px">
+    <div id="box">난블럭요소</div>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit eos iusto vitae iste quas veritatis quibusdam fuga dolores esse repellendus, deleniti architecto similique enim modi numquam. Dolorum inventore explicabo tempora.
     Esse veniam repudiandae officiis qui facilis, tempora consequuntur, libero eum, recusandae saepe suscipit adipisci? Beatae ab nostrum ratione sunt a magnam, nisi deserunt ipsum debitis placeat similique facere delectus alias.
     Assumenda delectus saepe quo, ipsum sit quibusdam tempora. Consectetur quis sit fuga magnam placeat nostrum voluptatem, amet enim cupiditate eius quibusdam ex alias minima mollitia voluptates consequuntur natus aliquam delectus!
     Ex ullam obcaecati dolore voluptate quidem beatae, aspernatur doloribus nemo eius totam quam expedita ea soluta commodi cum nulla sed atque aliquid ad repellat porro aperiam neque molestiae. Eveniet, cupiditate!
     Molestiae animi dolore porro? Expedita, rerum officia, ratione ut molestias recusandae facilis ipsam ea reiciendis mollitia nam maxime, ipsum accusantium dolor labore. Veritatis eos nemo qui eligendi, autem ad optio.
-
 </body>
 </html>
