css float 속성 실습

--- a/html_workspace/day0418/레이아웃/예제2.html
+++ b/html_workspace/day0418/레이아웃/예제2.html
@@ -15,11 +15,11 @@
         }
         #content *{
             height: 400px;
-            display:inline;
         }
         #aside{
             width: 100px;
             background-color: blue;
+            float: left;
         }
         #section{
             width: 900px;
