--- a/js_workspace/day0423/test.html
+++ b/js_workspace/day0423/test.html
@@ -14,12 +14,12 @@
 
     //10번
     // for(let i=1; i<=10; i++){
-    //     document.write(i+"회반복<br>");
+    //     document.write(`${i}회반복<br>`);
     // }
 
     //11
     // for(let i=2; i<=10; i+=2){
-    //     document.write(i+"회반복<br>");
+    //     document.write(`${i}회반복<br>`);
     // }
 
     //12
@@ -170,10 +170,10 @@
     //     document.write("<br>");
     // }
 
-    //33
+    //34
     // for(var i=1; i<=9; i++){
     //     for(var j=1; j<=9; j++){
-    //         document.write(i + "*" + j + " = "+ i*j +"<br>");
+    //         document.write(j + "*"+i+"="+ j*i +"&nbsp;&nbsp;&nbsp;&nbsp;");
     //     }
     //     document.write("<br>");
     // }
