다중반복문으로 테이블 조작하기

--- a/js_workspace/day0423/test.html
+++ b/js_workspace/day0423/test.html
@@ -92,7 +92,7 @@
     // }
 
     //23
-    // let input = prompt("원하는 수를 입력하세요.");
+    // let input = parseInt(prompt("원하는 수를 입력하세요."));
     // for(input; input>0; input--){
     //     document.write(input);
     // }
