조건문 변경

--- a/js_workspace/day0423/test.html
+++ b/js_workspace/day0423/test.html
@@ -170,11 +170,19 @@
     //     document.write("<br>");
     // }
 
-    //34
+    //33
     // for(var i=1; i<=9; i++){
-    //     for(var j=1; j<=9; j++){
-    //         document.write(j + "*"+i+"="+ j*i +"&nbsp;&nbsp;&nbsp;&nbsp;");
+    //     for(var j=2; j<=9; j++){
+    //         document.write(`${j}*1=${j}  `);
     //     }
     //     document.write("<br>");
     // }
+
+    //34
+    for(var i=1; i<=9; i++){
+        for(var j=2; j<=9; j++){
+            document.write(`${j}*${i}=${j*i}    `);
+        }
+        document.write("<br>");
+    }
 </script>
