--- a/js_workspace/day0423/test.html
+++ b/js_workspace/day0423/test.html
@@ -179,10 +179,10 @@
     // }
 
     //34
-    for(var i=1; i<=9; i++){
-        for(var j=2; j<=9; j++){
-            document.write(`${j}*${i}=${j*i}    `);
-        }
-        document.write("<br>");
-    }
+    // for(var i=1; i<=9; i++){
+    //     for(var j=2; j<=9; j++){
+    //         document.write(`${j}*${i}=${j*i}    `);
+    //     }
+    //     document.write("<br>");
+    // }
 </script>
