--- a/js_workspace/day0429/점심뭐먹을래.html
+++ b/js_workspace/day0429/점심뭐먹을래.html
@@ -6,8 +6,8 @@
     <title>Document</title>
     <script src="../lib/common.js"></script>
     <script>
-        let food = ["부대찌개", "짜장면", "쌀국수", "샐러드", "국밥", "김치찌개", 
-                    "생선조림", "냉면", "치킨", "족발", "토스트"];
+        let food = ["부대찌개", "짜장면", "쌀국수", "샐러드", "국밥", "김치찌개", "초밥",
+                    "마라탕", "냉면", "치킨", "족발", "토스트", "김치볶음밥", "오므라이스"];
 
         function lunch(){
             let div = document.querySelector("div");
