--- a/js_workspace/day0512/맛집spa.html
+++ b/js_workspace/day0512/맛집spa.html
@@ -145,6 +145,6 @@
         <div id="content"></div>
         <div id="aside_detail"></div>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaViAtzIHgeGFoRW5akXXn9hx60opigWg&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YourKey&callback=initMap"></script>
 </body>
 </html>
