--- a/js_workspace/day0515/베네치아타자게임.html
+++ b/js_workspace/day0515/베네치아타자게임.html
@@ -25,7 +25,7 @@
             height: 100%;
             background-color: bisque;
             float: left;
-            background-image: url(../../images/bene.webp);
+            background-image: url(../../images/bg2.jfif);
             background-size: 1100px 700px;
             position: relative;
             overflow: hidden;
