--- a/back_workspace/boot_workspace/bootwebsocket/src/main/resources/static/chat/client.html
+++ b/back_workspace/boot_workspace/bootwebsocket/src/main/resources/static/chat/client.html
@@ -114,6 +114,7 @@
         li button {
             margin-right: 10px;
             margin-top: 5px;
+
         }
 
         /* 방 생성 입력 박스 */
@@ -216,6 +217,8 @@
                             type:"CONNECT",
                             sender: username.value
                         });
+
+                        send({type:"ROOM_LIST"});
                     }
 
                     //서버로부터 메시지를 받을 때 실행되는 콜백
