--- a/back_workspace/boot_workspace/electroshop/src/main/resources/static/upload/send.html
+++ b/back_workspace/boot_workspace/electroshop/src/main/resources/static/upload/send.html
@@ -6,17 +6,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
-    <form id="form1">
-        <input type="file" name="file">
-        <button type="button">Upload</button>
-    </form>
-
+    <div>
+        <h3>단일 파일 업로드</h3>
+        <form id="form1">
+            <input type="file" name="file">
+            <button type="button">Upload</button>
+        </form>
+    </div>
+    <div>
+        <h3>다중 파일 업로드</h3>
+        <form id="form2">
+            <input type="file" id="fileList" name="files" multiple>
+            <button type="button">Upload</button>
+        </form>
+    </div>
     <script>
         //파일을 서버에 비동기로 전송
         function regist(){
             const formData = new FormData(document.getElementById("form1"));
             $.ajax({
-                url: "/files/upload",
+                url: "/file/upload",
                 method: "post",
                 data: formData,
                 processData: false,
@@ -27,12 +36,45 @@
                 error: function (data){
                     console.log(data);
                 }
-            })
+            });
         }
 
-        $("button").click(()=>{
+        function registMulti(){
+            const formData = new FormData();
+
+            console.log("유저가 선택한 파일의 수는 ", document.getElementById("fileList").files.length);
+
+            for(const file of document.getElementById("fileList").files){
+                //ajax의 비동기 업로드를 위해 formData에 유저가 선택한 파일들을 옮겨 심자
+                formData.append("files", file);     //files라는 파라미터명을 이용하여 배열 생성
+            }
+
+            //생성된 formData를 비동기 전송
+            $.ajax({
+                url: "/files/upload",
+                method: "post",
+                data: formData,
+                processData: false,     //ajax 전송 시 필수
+                contentType: false,      //ajax 전송 시 필수
+                success: function (data){
+                    console.log(data);
+                },
+                error: function (data){
+                    console.log(data);
+                }
+            });
+        }
+
+        //단일 파일업로드
+        $("#form1 button").click(()=>{
             regist();
         });
+
+        //다중 파일업로드
+        $("#form2 button").click(() => {
+            registMulti();
+        });
+
     </script>
 </body>
 </html>
