--- a/back_workspace/boot_workspace/JwtRedis/src/main/resources/static/member/login.html
+++ b/back_workspace/boot_workspace/JwtRedis/src/main/resources/static/member/login.html
@@ -65,6 +65,11 @@
             }),
             success: function (data){
                 console.log(data);
+                localStorage.setItem("accessToken", data.accessToken);
+                localStorage.setItem("deviceId", "browser");
+
+                //로그인 성공 후 메인 페이지 보여주기
+                location.href="/index.html";
             },
             error: function (xhr){
                 console.log(xhr.responseText);
