로그아웃 구현

--- a/back_workspace/boot_workspace/JwtRedis/src/main/resources/static/index.html
+++ b/back_workspace/boot_workspace/JwtRedis/src/main/resources/static/index.html
@@ -15,6 +15,31 @@
 
         }
 
+
+        //리프레시 토큰을 이용한 accessToken 재발급
+        //유효한 refresh 토큰을 이용하여 accesstoken 재발급 요청
+        //주의) refresh 토큰은 이미 쿠키로 받아왔기 때문에 요청시 무조건 자동으로 서버에 전송된다.(별도 지참X)
+        function tryAccessToken(){
+            $.ajax({
+                url: "/member/refresh",
+                method: "post",
+                contentType: "application/json;charset=utf-8",
+                data:JSON.stringify({
+                    deviceId: localStorage.getItem("deviceId")
+                }),
+                success: function (data){
+                    //새롭게 발급된 Access 토큰 확인
+                    console.log("새롭게 발급받은 accessToken: "+data.accessToken);
+
+                    //저장소 보관
+                    localStorage.setItem("accessToken", data.accessToken);
+                },
+                error: function (xhr){
+                    console.log(xhr);
+                }
+            });
+        }
+
         function getMyInfo(){
             //로그인 시점에 저장해놓은 accessToken 꺼내기
             const accessToken = localStorage.getItem("accessToken");
@@ -29,13 +54,40 @@
                     console.log(data);
                 },
                 error: function (xhr){
-                    console.log(xhr);
+                    if(xhr.status == 401){
+                        //나의 정보를 요청하던 중, 401을 만났으므로 토큰 만료 가능성이 높음.
+                        //따라서 토큰 재발급을 진행
+                        console.log("엑세스 토큰 만료로 인하여 재발급 몰래 받기 시도할 예정");
+                        tryAccessToken();
+                    }
                 }
             });
         }
 
+        //로그아웃 요청 처리
         function logout(){
+            const accessToken = localStorage.getItem("accessToken");
+            const deviceId = localStorage.getItem("deviceId");
 
+            $.ajax({
+                url: "/member/logout",
+                method: "post",
+                contentType: "application/json;charset=utf-8",
+                data: JSON.stringify({
+                    accessToken: accessToken,
+                    deviceId: deviceId
+                }),
+                success: function (data){
+                    //로컬 상에 보유한 데이터를 삭제
+                    localStorage.removeItem("accessToken");
+                    localStorage.removeItem("deviceId");
+                    alert("로그아웃 되었습니다.");
+                    location.href="/member/login.html";
+                },
+                error: function (xhr){
+                    console.log(xhr);
+                }
+            })
         }
     </script>
 </body>
